# console/src/api/openapi.json
@@ -3461,28 +3461,6 @@
             ],
             "title": "Config"
           },
-          "equity_prior_temperature": {
-            "anyOf": [
-              {
-                "type": "number"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Equity Prior Temperature"
-          },
-          "equity_prior_weight": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Equity Prior Weight"
-          },
           "experiment": {
             "anyOf": [
               {
@@ -3577,50 +3555,6 @@
           "to": {
             "title": "To",
             "type": "integer"
-          },
-          "warm_start_at": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Warm Start At"
-          },
-          "warm_start_from": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Warm Start From"
-          },
-          "warm_start_shape": {
-            "anyOf": [
-              {
-                "type": "string"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Warm Start Shape"
-          },
-          "warm_start_weight": {
-            "anyOf": [
-              {
-                "type": "integer"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Warm Start Weight"
           },
           "workers": {
             "anyOf": [
